# MuTEd

./: .gitignore  README.md
Notebook/: Analysis.ipynb  README.md  pyproject.toml  questions2latex.py  requirements.txt
Notebook/data/: coverage.csv  criteria.csv  hints.csv  mutants.csv  questions.csv  questions_and_criteria.csv
Notebook/data/jacoco/: student10_part1.java.csv  student11_part1.java.csv  student11_part2.java.csv  student12_part1.java.csv  student12_part2.java.csv  student14_part1.java.csv  student14_part2.java.csv  student15_part1.java.csv  student15_part2.java.csv  student17_part1.java.csv  student17_part2.java.csv  student18_part1.java.csv  student19_part1.java.csv  student19_part2.java.csv  student1_part1.java.csv  student20_part2.java.csv  student21_part2.java.csv  student22_part2.java.csv  student23_part1.java.csv  student23_part2.java.csv  student24_part1.java.csv  student25_part1.java.csv  student25_part2.java.csv  student26_part1.java.csv  student27_part1.java.csv  student27_part2.java.csv  student28_part1.java.csv  student28_part2.java.csv  student29_part1.java.csv  student29_part2.java.csv  student30_part1.java.csv  student30_part2.java.csv  student31_part1.java.csv  student32_part2.java.csv  student33_part1.java.csv  student33_part2.java.csv  student34_part1.java.csv  student34_part2.java.csv  student35_part2.java.csv  student36_part1.java.csv  (+20 more)
Notebook/data/pit/: student10_part1.java.csv  student10_part2.java.csv  student11_part1.java.csv  student11_part2.java.csv  student12_part1.java.csv  student12_part2.java.csv  student14_part1.java.csv  (+57 more)
(+148 files in other folders)
