[tool.poetry]
name = "MuTEd notebook"
version = "0.1.0"
description = ""
authors = ["Martin <martin.balfroid@student.unamur.be>", "Pierre <pierre.luycx@student.unamur.be>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
jupyter = "^1.0.0"
pandas = "^1.4.1"
odfpy = "^1.4.1"
styleframe = "^4.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
